# Aula17_Python

./: README.md  desafio.py  exemplo.py  meubanco.db  pyproject.toml
