[tool.poetry]
name = "aula17"
version = "0.1.0"
description = "Meu projeto API"
authors = ["Luiz Artur <luiz.lamoglia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
